【优化】付费统计